--- a/.github/workflows/docker-lint.yml
+++ b/.github/workflows/docker-lint.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build all services
-        run: docker-compose build
+        run: docker compose build
 
   python-unit-tests:
     runs-on: ubuntu-latest
