--- a/.github/workflows/docker-lint.yml
+++ b/.github/workflows/docker-lint.yml
@@ -17,12 +17,20 @@ jobs:
 
   python-unit-tests:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: playbook-engine
     steps:
-      - uses: actions/checkout@v3
-      - name: Install pytest
-        run: pip install pytest
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+
       - name: Run engine test
-        run: pytest ../tests/test_engine.py
+        run: python -m pytest tests/test_engine.py
+
